Fix bug on contact.html page with full screen height on tablet devices by adding min-height: 100vh

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -306,7 +306,7 @@
 }
 /* Contact Form */
 .contact-section {
-    padding: 90px 0;
+    padding: 5.6rem 0;
 }
 .contact-heading > h2 {
     text-align: center;
@@ -447,6 +447,11 @@ https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
     }
     .footer-email > a {
         margin-left: 0.2rem;
+    }
+    /* Contact Form Fix - to display full screen height on tabled devices */
+    .contact-section {
+        padding: 8rem 0;
+        min-height: 100vh;
     }
 }
 
